--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
-    "start": "node ./server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "node ./server.js"
+    "build": "node server.js"
   },
   "dependencies": {
     "config": "^3.3.12",
